--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/vercel": "^9.0.0",
+    "@astrojs/vercel": "^9.0.2",
     "@portabletext/types": "^2.0.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/astro": "^3.2.10",
@@ -23,8 +23,9 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "astro": "^5.13.4",
+    "astro": "^5.16.5",
     "astro-portabletext": "^0.11.2",
+    "astro-swiper": "^1.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
@@ -34,6 +35,7 @@
     "react-is": "^19.1.1",
     "sanity": "^4.6.0",
     "styled-components": "^6.1.19",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7"
